# mongodb-atlas-admin-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: endpoint.rs  lib.rs
src/api/: mod.rs
src/api/access_tracking/: mod.rs
src/api/access_tracking/routes/: get_one_cluster_access_history_by_cluster_name.rs  get_one_cluster_access_history_by_hostname.rs  mod.rs
src/api/alert_configurations/: mod.rs
src/api/alert_configurations/routes/: get_all_alert_config_matchers_field_names.rs  get_all_alert_configs_for_project.rs  mod.rs
src/api/database_users/: mod.rs
src/api/database_users/routes/: create.rs  get_all.rs  get_one.rs  mod.rs
src/api/projects/: create_one.rs  delete_one.rs  get_all.rs  mod.rs
